Added repositories index view

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,4 +1,4 @@
 %p Welcome to hyde
 %p Authenticate with github
-%a{:href => "https://github.com/login/oauth/authorize?scope=public_repo&client_id=#{client_id}"}
+%a{:href => "https://github.com/login/oauth/authorize?scope=repo&client_id=#{client_id}"}
   Click Here!
