decorate repos from octokit.rb use request_store to save the octokit.rb and make it reusable everywhere including models

--- a/app/views/repos/index.html.haml
+++ b/app/views/repos/index.html.haml
@@ -1,3 +1,5 @@
+%h3 Repos deployed on Github pages
+
 %ul
-- @repos.each do |repo|
-  %li= link_to(repo.full_name, repo_path(repo.name))
+  - @repos.select(&:github_pageable?).each do |repo|
+    %li= link_to(repo.full_name, repo_path(repo.name))
